--- a/Do-it/ch5_tab_list/listview_example/pubspec.yaml
+++ b/Do-it/ch5_tab_list/listview_example/pubspec.yaml
@@ -59,9 +59,15 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - repo/images/bee.png
+    - repo/images/cat.png
+    - repo/images/cow.png
+    - repo/images/dog.png
+    - repo/images/fox.png
+    - repo/images/monkey.png
+    - repo/images/pig.png
+    - repo/images/wolf.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
